feat: add documentation for the project