@@ -4,24 +4,19 @@ import co.edu.uniquindio.pgii.plataforma_eventos.application.facade.admin.Admini
 import co.edu.uniquindio.pgii.plataforma_eventos.application.facade.admin.AdministracionFacadeImpl;
 import co.edu.uniquindio.pgii.plataforma_eventos.domain.enums.AsientoEstado;
 import co.edu.uniquindio.pgii.plataforma_eventos.domain.enums.CompraEstado;
-import co.edu.uniquindio.pgii.plataforma_eventos.domain.model.AsientoEvento;
 import co.edu.uniquindio.pgii.plataforma_eventos.domain.model.Compra;
 import co.edu.uniquindio.pgii.plataforma_eventos.domain.model.EntradaAsiento;
-import co.edu.uniquindio.pgii.plataforma_eventos.domain.model.Zona;
 import co.edu.uniquindio.pgii.plataforma_eventos.ui.util.SessionManager;
 import co.edu.uniquindio.pgii.plataforma_eventos.ui.util.ViewNavigator;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.collections.FXCollections;
-import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.scene.control.Alert;
-import javafx.scene.control.Button;
 import javafx.scene.control.ButtonType;
 import javafx.scene.control.ChoiceDialog;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.DatePicker;
-import javafx.scene.control.Dialog;
 import javafx.scene.control.Label;
 import javafx.scene.control.TableColumn;
 import javafx.scene.control.TableView;
@@ -32,34 +27,65 @@ import java.net.URL;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.ResourceBundle;
 import java.util.stream.Collectors;
 
+/**
+ * Controlador JavaFX del módulo de gestión de compras para el administrador.
+ *
+ * <p>Lista todas las compras del sistema con filtros combinables (usuario, evento, estado,
+ * fecha desde). Expone dos operaciones administrativas sobre la compra seleccionada:</p>
+ * <ul>
+ *   <li><strong>Reasignar asiento</strong>: flujo de dos {@code ChoiceDialog} — primero el
+ *       asiento actual (extraído recorriendo la cadena de decoradores hasta {@code EntradaAsiento})
+ *       y luego el asiento destino libre en el inventario del evento. Delega a
+ *       {@link AdministracionFacade#reasignarAsiento}.</li>
+ *   <li><strong>Registrar reembolso</strong>: confirma y delega a
+ *       {@link AdministracionFacade#reembolsarCompra} (solo PAGADAS o CONFIRMADAS).</li>
+ * </ul>
+ *
+ * <p>[Requerimiento: RF-011] - Permite al administrador registrar reembolsos de compras.</p>
+ * <p>[Requerimiento: RF-018] - Implementa la reasignación de asiento numerado dentro de la
+ * misma compra, actualizando el inventario comercial ({@code AsientoEvento}) del evento.</p>
+ * <p>[Patrón: Decorator] - El helper privado {@code unwrapAsientoId} recorre la cadena de
+ * decoradores hasta encontrar el {@code EntradaAsiento} concreto para obtener el ID.</p>
+ * <p>[Patrón: Facade] - Las operaciones de reasignación y reembolso se delegan a
+ * {@link AdministracionFacade}, que aplica las reglas de negocio y las transiciones de State.</p>
+ */
 public class AdminComprasController implements Initializable {
 
     private static final DateTimeFormatter FECHA_FMT = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
 
-    private AdministracionFacade administracionFacade = new AdministracionFacadeImpl();
+    private final AdministracionFacade administracionFacade = new AdministracionFacadeImpl();
 
-    @FXML private TextField                  txtFiltroUsuario;
-    @FXML private TextField                  txtFiltroEvento;
-    @FXML private ComboBox<CompraEstado>     comboFiltroEstado;
-    @FXML private DatePicker                 dtpDesde;
-    @FXML private Button                     btnFiltrar;
-    @FXML private Button                     btnLimpiarFiltros;
+    @FXML
+    private TextField txtFiltroUsuario;
+    @FXML
+    private TextField txtFiltroEvento;
+    @FXML
+    private ComboBox<CompraEstado> comboFiltroEstado;
+    @FXML
+    private DatePicker dtpDesde;
 
-    @FXML private TableView<Compra>           tblCompras;
-    @FXML private TableColumn<Compra, String> colIdCompra;
-    @FXML private TableColumn<Compra, String> colUsuario;
-    @FXML private TableColumn<Compra, String> colEvento;
-    @FXML private TableColumn<Compra, String> colFecha;
-    @FXML private TableColumn<Compra, String> colTotal;
-    @FXML private TableColumn<Compra, String> colEstado;
+    @FXML
+    private TableView<Compra> tblCompras;
+    @FXML
+    private TableColumn<Compra, String> colIdCompra;
+    @FXML
+    private TableColumn<Compra, String> colUsuario;
+    @FXML
+    private TableColumn<Compra, String> colEvento;
+    @FXML
+    private TableColumn<Compra, String> colFecha;
+    @FXML
+    private TableColumn<Compra, String> colTotal;
+    @FXML
+    private TableColumn<Compra, String> colEstado;
 
-    @FXML private Label  lblTotalCompras;
-    @FXML private Button btnReasignarAsiento;
-    @FXML private Button btnRegistrarReembolso;
+    @FXML
+    private Label lblTotalCompras;
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
@@ -73,10 +99,8 @@ public class AdminComprasController implements Initializable {
         cargarCompras();
     }
 
-    public void setAdministracionFacade(AdministracionFacade f) { this.administracionFacade = f; }
-
     @FXML
-    public void onFiltrarClick(ActionEvent event) {
+    public void onFiltrarClick() {
         String qU = safe(txtFiltroUsuario.getText()).toLowerCase();
         String qE = safe(txtFiltroEvento.getText()).toLowerCase();
         CompraEstado est = comboFiltroEstado.getValue();
@@ -94,16 +118,21 @@ public class AdminComprasController implements Initializable {
     }
 
     @FXML
-    public void onLimpiarFiltrosClick(ActionEvent event) {
-        txtFiltroUsuario.clear(); txtFiltroEvento.clear();
-        comboFiltroEstado.setValue(null); dtpDesde.setValue(null);
+    public void onLimpiarFiltrosClick() {
+        txtFiltroUsuario.clear();
+        txtFiltroEvento.clear();
+        comboFiltroEstado.setValue(null);
+        dtpDesde.setValue(null);
         cargarCompras();
     }
 
     @FXML
-    public void onReasignarAsientoClick(ActionEvent event) {
+    public void onReasignarAsientoClick() {
         Compra sel = tblCompras.getSelectionModel().getSelectedItem();
-        if (sel == null) { mostrarError("Selecciona una compra."); return; }
+        if (sel == null) {
+            mostrarError("Selecciona una compra.");
+            return;
+        }
         if (sel.getEstadoEnum() != CompraEstado.PAGADA && sel.getEstadoEnum() != CompraEstado.CONFIRMADA) {
             mostrarError("Solo se pueden reasignar asientos en compras PAGADAS o CONFIRMADAS.");
             return;
@@ -112,7 +141,7 @@ public class AdminComprasController implements Initializable {
         // Recolectar asientos actuales de la compra (entradas con asiento numerado)
         List<String> asientosActuales = sel.getEntradas().stream()
                 .map(AdminComprasController::unwrapAsientoId)
-                .filter(id -> id != null)
+                .filter(Objects::nonNull)
                 .toList();
 
         if (asientosActuales.isEmpty()) {
@@ -121,7 +150,7 @@ public class AdminComprasController implements Initializable {
         }
 
         // Paso 1: elegir el asiento a reasignar
-        ChoiceDialog<String> dlgAntiguo = new ChoiceDialog<>(asientosActuales.get(0), asientosActuales);
+        ChoiceDialog<String> dlgAntiguo = new ChoiceDialog<>(asientosActuales.getFirst(), asientosActuales);
         dlgAntiguo.setTitle("Reasignar Asiento");
         dlgAntiguo.setHeaderText("Selecciona el asiento actual a cambiar:");
         dlgAntiguo.setContentText("Asiento:");
@@ -140,7 +169,7 @@ public class AdminComprasController implements Initializable {
             return;
         }
 
-        ChoiceDialog<String> dlgNuevo = new ChoiceDialog<>(disponibles.get(0), disponibles);
+        ChoiceDialog<String> dlgNuevo = new ChoiceDialog<>(disponibles.getFirst(), disponibles);
         dlgNuevo.setTitle("Reasignar Asiento");
         dlgNuevo.setHeaderText("Selecciona el nuevo asiento:");
         dlgNuevo.setContentText("Asiento destino:");
@@ -169,9 +198,12 @@ public class AdminComprasController implements Initializable {
     }
 
     @FXML
-    public void onRegistrarReembolsoClick(ActionEvent event) {
+    public void onRegistrarReembolsoClick() {
         Compra sel = tblCompras.getSelectionModel().getSelectedItem();
-        if (sel == null) { mostrarError("Selecciona una compra."); return; }
+        if (sel == null) {
+            mostrarError("Selecciona una compra.");
+            return;
+        }
         if (sel.getEstadoEnum() != CompraEstado.PAGADA && sel.getEstadoEnum() != CompraEstado.CONFIRMADA) {
             mostrarError("Sólo se pueden reembolsar compras PAGADAS o CONFIRMADAS.");
             return;
@@ -190,19 +222,52 @@ public class AdminComprasController implements Initializable {
     }
 
     // --- Navegación ---
-    @FXML public void onNavDashboard(ActionEvent e) { navegar("AdminDashboardView.fxml"); }
-    @FXML public void onNavEventos(ActionEvent e) { navegar("AdminEventosView.fxml"); }
-    @FXML public void onNavRecintos(ActionEvent e) { navegar("AdminRecintosView.fxml"); }
-    @FXML public void onNavUsuarios(ActionEvent e) { navegar("AdminUsuariosView.fxml"); }
-    @FXML public void onNavCompras(ActionEvent e) { }
-    @FXML public void onNavAsientos(ActionEvent e) { navegar("AdminGestorAsientosView.fxml"); }
-    @FXML public void onNavReportes(ActionEvent e) { navegar("AdminReportesView.fxml"); }
-    @FXML public void onNavIncidencias(ActionEvent e) { navegar("AdminIncidenciasView.fxml"); }
-    @FXML public void onCerrarSesion(ActionEvent e) {
+    @FXML
+    public void onNavDashboard() {
+        navegar("AdminDashboardView.fxml");
+    }
+
+    @FXML
+    public void onNavEventos() {
+        navegar("AdminEventosView.fxml");
+    }
+
+    @FXML
+    public void onNavRecintos() {
+        navegar("AdminRecintosView.fxml");
+    }
+
+    @FXML
+    public void onNavUsuarios() {
+        navegar("AdminUsuariosView.fxml");
+    }
+
+    @FXML
+    public void onNavCompras() {
+    }
+
+    @FXML
+    public void onNavAsientos() {
+        navegar("AdminGestorAsientosView.fxml");
+    }
+
+    @FXML
+    public void onNavReportes() {
+        navegar("AdminReportesView.fxml");
+    }
+
+    @FXML
+    public void onNavIncidencias() {
+        navegar("AdminIncidenciasView.fxml");
+    }
+
+    @FXML
+    public void onCerrarSesion() {
         SessionManager.getInstance().logout();
         Stage stage = (Stage) tblCompras.getScene().getWindow();
         ViewNavigator.cargarVistaUsuario("LoginView.fxml", stage);
     }
+
     private void navegar(String fxml) {
         Stage stage = (Stage) tblCompras.getScene().getWindow();
         ViewNavigator.cargarVistaAdmin(fxml, stage);
@@ -214,12 +279,21 @@ public class AdminComprasController implements Initializable {
         lblTotalCompras.setText("Total: " + lista.size() + " compras");
     }
 
-    private String safe(String s) { return s == null ? "" : s.trim(); }
+    private String safe(String s) {
+        return s == null ? "" : s.trim();
+    }
 
     private void mostrarError(String m) {
-        Alert a = new Alert(Alert.AlertType.ERROR); a.setHeaderText(null); a.setContentText(m); a.showAndWait();
+        Alert a = new Alert(Alert.AlertType.ERROR);
+        a.setHeaderText(null);
+        a.setContentText(m);
+        a.showAndWait();
     }
+
     private void mostrarInfo(String m) {
-        Alert a = new Alert(Alert.AlertType.INFORMATION); a.setHeaderText(null); a.setContentText(m); a.showAndWait();
+        Alert a = new Alert(Alert.AlertType.INFORMATION);
+        a.setHeaderText(null);
+        a.setContentText(m);
+        a.showAndWait();
     }
 }
